creating unit tests for OrderService - part 2