@@ -9,6 +9,9 @@ import dev.cami.pottencial.techtest.service.impl.OrderService;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentMatchers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -16,7 +19,6 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
@@ -32,7 +34,7 @@ public class OrderServiceTest {
   void shouldCreateOrder() {
     //given
     Seller sellerFake = new Seller();
-    List<Item> itensFake = Arrays.asList(new Item());
+    List<Item> itensFake = List.of(new Item());
     Order orderFake = builderOrder();
     orderFake.setSeller(sellerFake);
     //when
@@ -69,6 +71,67 @@ public class OrderServiceTest {
         .hasMessage(String.format("Order '%s' not found", idFake));
   }
 
+  @ParameterizedTest
+  @CsvSource({
+      "0, 1",
+      "0, 4",
+      "1, 2",
+      "1, 4",
+      "2, 3"
+  })
+  void shouldUpdateOrder(int currentStatus, int newStatus) {
+    //given
+    Order orderFake = builderOrder();
+    orderFake.setStatus(Status.values()[currentStatus]);
+    Mockito.when(orderRepository.save(ArgumentMatchers.any(Order.class)))
+        .thenReturn(orderFake);
+    //when
+    Order actual = orderService.update(orderFake, newStatus);
+    Assertions.assertThat(actual).isSameAs(orderFake);
+    Assertions.assertThat(actual.getStatus()).isSameAs(Status.values()[newStatus]);
+  }
+  @ParameterizedTest
+  @CsvSource({
+      "0, 1",
+      "0, 4",
+      "1, 2",
+      "1, 4",
+      "2, 3"
+  })
+  void shouldCalculateNewStatus(int currentStatus, int status) {
+    //when
+    int actual = orderService.calculateNewStatus(currentStatus, status);
+    //then
+    Assertions.assertThat(actual).isSameAs(status);
+  }
+
+  @ParameterizedTest
+  @ValueSource(ints = {-1, 3})
+  void shouldThrowExceptionWhenCalculatingNewStatusWithInvalidCurrentStatus(int currentStatus) {
+    //when + then
+    Assertions.assertThatThrownBy(() -> orderService.calculateNewStatus(currentStatus, 0))
+        .isInstanceOf(IllegalArgumentException.class)
+        .hasMessage(OrderService.INVALID_TRANSITION_MESSAGE);
+  }
+
+  @ParameterizedTest
+  @CsvSource({
+      "0, 0",
+      "0, 2",
+      "0, 3",
+      "1, 0",
+      "1, 1",
+      "1, 3",
+      "2, 0",
+      "2, 1",
+      "2, 4"
+  })
+  void shouldThrowIllegalArgumentExceptionWhenCalculatingNewStatusWithInvalidStatus(int currentStatus, int status) {
+    //when + then
+    Assertions.assertThatThrownBy(() -> orderService.calculateNewStatus(currentStatus, status))
+        .isInstanceOf(IllegalArgumentException.class)
+        .hasMessage(OrderService.INVALID_TRANSITION_MESSAGE);
+  }
 
   private Order builderOrder() {
     return Order.builder()
